--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "axios": "^0.27.2",
     "core-js": "^3.8.3",
     "jquery": "^3.6.0",
     "papaparse": "^5.3.2",
     "vue": "^2.6.14",
+    "vue-router": "^3.5.4",
     "vuetify": "^2.6.0"
   },
   "devDependencies": {
